<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.appinc.movieapp.views.detailMovie.DetailMovieViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="192dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/app_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_movie"
                    android:scaleType="centerCrop"
                    tools:onLoadUrl="@{viewModel.movie.posterPath}"
                    tools:srcCompat="@tools:sample/avatars" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:title="Detail Movie"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.movie.title}"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:text="@string/app_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@{viewModel.movie.releaseDate}"
                    tools:text="Release Date: 2021-12-15" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="8.5/10"
                    tools:voteCount="@{viewModel.movie.voteAverage}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:priceFormat="@{viewModel.movie.budget}"
                    tools:text="$500.000.000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/summary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{viewModel.movie.overview}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/trailers"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:isVisibleFromList="@{viewModel.videos}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcVideo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    tools:isVisibleFromList="@{viewModel.videos}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_card_preview_youtube" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/favourite"
            android:focusable="true"
            tools:src="@drawable/heart_2"
            android:onClick="@{ () -> viewModel.setFavorite()}"
            tools:isFavorite="@{viewModel.movie.favorite}"
            app:backgroundTint="@color/purple_500"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>